<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.map.ActiveMapFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_media_play"
        app:backgroundTint="#3F51B5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="407dp"
        android:layout_height="86dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/activity_icon"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:contentDescription="activity icon" />

        <TextView
            android:id="@+id/activity_metrics_text"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="10dp"
            android:contentDescription="activity metrics"
            android:fontFamily="sans-serif-thin"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#040000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="70dp">

        <!--        <com.mapbox.mapboxsdk.maps.MapView-->
        <!--            android:id="@+id/mapView"-->

        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent" />-->
        <fragment
            android:id="@+id/map_fragment2"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragment.map.PointMapFragment" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>