<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.CreatePostFragment">

    <TextView
        android:id="@+id/create_post_header_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_post"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/create_post_schedule_switch"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginBottom="120dp"
        android:text="@string/schedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_post_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/post"
        android:textSize="16sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/create_post_image"
        android:layout_width="match_parent"
        android:layout_height="357dp"
        android:layout_marginBottom="292dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/person_photo" />

    <EditText
        android:id="@+id/post_description_input"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="160dp"
        android:background="@color/dark2"
        android:drawablePadding="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:includeFontPadding="true"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="10dp"
        android:text="@string/elipses"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>