...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/profile_follow_switch"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/follow_button"
                        android:textColor="@color/gray_400"
                        android:textSize="12sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/profile_block_switch"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/block_button"
...
                        android:layout_marginEnd="10dp"
                        android:text="Blocked"
                        android:textSize="12sp"
                        app:backgroundTint="@color/teal_200" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_out_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/action_sign_out"
                        android:textSize="12sp"
                        app:backgroundTint="@color/teal_200" />
                </LinearLayout>

                <!-- Buttons -->
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/profile_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:scrollbars="vertical" />

        </LinearLayout>
...
